Upgrade to Nexus version 3.8.0-02